--- a/frontEnd/package.json
+++ b/frontEnd/package.json
@@ -1,11 +1,9 @@
 {
   "name": "frontend",
   "proxy": "https://cdn-dev.preoday.com/challenge/menu",
-
   "private": true,
   "version": "0.0.0",
   "type": "module",
-
   "scripts": {
     "dev": "vite",
     "build": "vite build",
@@ -13,6 +11,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@chakra-ui/react": "^2.8.2",
     "axios": "^1.4.0",
     "bootstrap": "^5.3.0",
     "react": "^18.2.0",
