--- a/frontEnd/package.json
+++ b/frontEnd/package.json
@@ -21,6 +21,7 @@
     "react-helmet-async": "^1.3.0",
     "react-icons": "^5.0.1",
     "react-router-dom": "^6.12.0",
+    "react-scroll": "^1.9.0",
     "react-toastify": "^10.0.4",
     "typescript": "^5.4.2"
   },
