--- a/frontEnd/package.json
+++ b/frontEnd/package.json
@@ -20,6 +20,7 @@
     "react-helmet": "^6.1.0",
     "react-helmet-async": "^1.3.0",
     "react-icons": "^5.0.1",
+    "react-modal": "^3.16.1",
     "react-router-dom": "^6.12.0",
     "react-scroll": "^1.9.0",
     "react-toastify": "^10.0.4",
